# docker-maid

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.example.yaml  sonar-project.properties
.github/workflows/: publish_image.yml  scan.yml
src/: enums.rs  maid.rs  main.rs  structs.rs  utils.rs
