[package]
name = "docker-maid"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
colog = "1.4.0"
tokio = {version = "1.48.0", features = ["rt", "macros", "time"]}
futures = "0.3.31"
bollard = "0.19.4"
cron = "0.15.0"
chrono = "0.4.42"
serde_json = "1.0.148"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.